--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <h1 class="display-4">Flash Cards</h1>
       <p class="lead">For Learning JS & jQuery</p>
     </div>
+    <div class="row">
+      <div class="col">
+        <div class="box">ONE</div>
+      </div>
+    </div>
+
+
   </div>
 
 </body>
