add two rows, four colmns

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
       <p class="lead">For Learning JS & jQuery</p>
     </div>
     <div class="row">
-      <div class="col">
         <div class="box">ONE</div>
-      </div>
+        <div class="box">TWO</div>
+        <div class="box">THREE</div>
+        <div class="box">FOUR</div>
+    </div>
+    <div class="row">
+      <div class="box">FIVE</div>
+      <div class="box">FIVE</div>
+      <div class="box">FIVE</div>
+      <div class="box">FIVE</div>
     </div>
 
 
