add <p> to box class

--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
       <p class="lead">For Learning JS & jQuery</p>
     </div>
     <div class="row">
-        <div class="box">ONE</div>
-        <div class="box">TWO</div>
-        <div class="box">THREE</div>
-        <div class="box">FOUR</div>
+        <div class="box" id="one">
+          <p>ONE</p>
+        </div>
+        <div class="box" id="one">
+          <p>ONE</p>
+        </div>
+        <div class="box" id="one">
+          <p>ONE</p>
+        </div>
+        <div class="box" id="one">
+          <p>ONE</p>
+        </div>
     </div>
     <div class="row">
-      <div class="box">FIVE</div>
-      <div class="box">FIVE</div>
-      <div class="box">FIVE</div>
-      <div class="box">FIVE</div>
+      <div class="box" id="one">FIVE</div>
+      <div class="box" id="one">SIX</div>
+      <div class="box" id="one">SEVEN</div>
+      <div class="box" id="one">EIGHT</div>
     </div>
 
 
