change box background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="box" id="one">
           <p>ONE</p>
         </div>
-        <div class="box" id="one">
+        <div class="box" id="two">
           <p>ONE</p>
         </div>
         <div class="box" id="one">
