first card jQuery working

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
       <p><strong>Learning code</strong> Here is a set of flash cards to help you learn code.</p>
 
     <div class="boxfront">
-      <p>First card <span class="clickable">Click here</span> for the answer</p>
+      <p>First card</p>
+      <p> <span class="clickable">Click here</span></p>
+      <p>For answer</p>
 
     </div>
 
     <div class="boxback">
-      <p>Here's the answer <span class="clickable">Click here</span> to go back</p>
+      <p>The Answer</p>
+      <p> <span class="clickable">Click here</span></p>
+      <p>To Return</p>
     </div>
   </div>
 </body>
