--- a/index.html
+++ b/index.html
@@ -14,25 +14,21 @@
     <h1>Flash-Cards</h1>
       <p><strong>Learning code</strong> Here is a set of flash cards to help you learn code.</p>
 
-    <div class="boxfront">
+    <div class="cardfront01">
       <p>First card</p>
-      <p> <span class="clickable">Click here</span></p>
+      <p> <span class="clickable01">Click here</span></p>
       <p>For answer</p>
-
     </div>
-
-    <div class="boxback">
+    <div class="cardback01">
       <p>The Answer</p>
-      <p> <span class="clickable">Click here</span></p>
+      <p> <span class="clickable01">Click here</span></p>
       <p>To Return</p>
     </div>
   </div>
-</body>
-
-</html>
 
 
-  </div>
+
 
 </body>
+
 </html>
