update link text for both cards

--- a/index.html
+++ b/index.html
@@ -15,26 +15,33 @@
       <p><strong>Learning code</strong> Here is a set of flash cards to help you learn code.</p>
 
     <div class="cardfront01">
-      <p>First card</p>
-      <p> <span class="clickable01">Click here</span></p>
+      <span class="clickable01"><p>First card</p>
+      <p>Click here</p>
       <p>For answer</p>
+      </span>
     </div>
     <div class="cardback01">
+      <span class="clickable01">
       <p>The Answer</p>
-      <p> <span class="clickable01">Click here</span></p>
+      <p> Click here</p>
       <p>To Return</p>
+    </span>
     </div>
 
     <div class="cardfront02">
-      <p>First card</p>
-      <p> <span class="clickable02">Click here</span></p>
+      <span class="clickable02"><p>First card</p>
+      <p>Click here</p>
       <p>For answer</p>
+      </span>
     </div>
     <div class="cardback02">
+      <span class="clickable02">
       <p>The Answer</p>
-      <p> <span class="clickable02">Click here</span></p>
+      <p> Click here</p>
       <p>To Return</p>
+    </span>
     </div>
+
 
 
   </div>
