add card styling to both cards

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="cardfront02">
-      <span class="clickable02"><p>First card</p>
+      <span class="clickable02"><p>Second card</p>
       <p>Click here</p>
       <p>For answer</p>
       </span>
