move cards to first and second rows

--- a/index.html
+++ b/index.html
@@ -12,36 +12,37 @@
 <body>
   <div class="container">
     <h1>Flash-Cards</h1>
-      <p><strong>Learning code</strong> Here is a set of flash cards to help you learn code.</p>
+    <p><strong>Learning code</strong> Here is a set of flash cards to help you learn code.</p>
 
-    <div class="cardfront01">
-      <span class="clickable01"><p>First card</p>
-      <p>Click here</p>
-      <p>For answer</p>
+    <div class="row">
+      <div class="cardfront01">
+        <span class="clickable01"><p>First card</p>
+        <p>Click here</p>
+        <p>For answer</p>
+        </span>
+      </div>
+      <div class="cardback01">
+        <span class="clickable01">
+        <p>The Answer</p>
+        <p> Click here</p>
+        <p>To Return</p>
       </span>
-    </div>
-    <div class="cardback01">
-      <span class="clickable01">
-      <p>The Answer</p>
-      <p> Click here</p>
-      <p>To Return</p>
-    </span>
-    </div>
+      </div>
 
-    <div class="cardfront02">
-      <span class="clickable02"><p>Second card</p>
-      <p>Click here</p>
-      <p>For answer</p>
+      <div class="cardfront02">
+        <span class="clickable02"><p>Second card</p>
+        <p>Click here</p>
+        <p>For answer</p>
+        </span>
+      </div>
+      <div class="cardback02">
+        <span class="clickable02">
+        <p>The Answer</p>
+        <p> Click here</p>
+        <p>To Return</p>
       </span>
+      </div>
     </div>
-    <div class="cardback02">
-      <span class="clickable02">
-      <p>The Answer</p>
-      <p> Click here</p>
-      <p>To Return</p>
-    </span>
-    </div>
-
 
 
   </div>
